# Corebrain

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  health.py  proposal.drawio  pyproject.toml  setup.ps1  setup.py  setup.sh
.github/workflows/: ci.yml
corebrain/: __init__.py  cli.py  sdk.py
corebrain/cli/: __init__.py  __main__.py  commands.py  common.py  config.py  utils.py
corebrain/cli/auth/: __init__.py  api_keys.py  sso.py
corebrain/config/: __init__.py  manager.py
corebrain/core/: __init__.py  client.py  common.py  query.py  test_utils.py
corebrain/core/config/: __init__.py  manager.py
corebrain/core/db/: __init__.py  factory.py  schema_file.py
corebrain/core/db/connectors/: __init__.py  mongodb.py  sql.py
corebrain/core/db/schema/: extractor.py  optimizer.py
corebrain/core/utils/: __init__.py  encrypter.py  logging.py
corebrain/db/: __init__.py  connector.py  engines.py  factory.py  interface.py  schema_file.py
corebrain/db/connectors/: __init__.py  mongodb.py  sql.py
corebrain/db/schema/: __init__.py  extractor.py  optimizer.py
corebrain/lib/sso/: __init__.py  auth.py  client.py
corebrain/network/: __init__.py  client.py
corebrain/services/: schema.py
corebrain/utils/: __init__.py  encrypter.py  logging.py  serializer.py
corebrain/wrappers/csharp/: .editorconfig  .gitignore  CorebrainCS.sln  LICENSE  README.md
corebrain/wrappers/csharp/CorebrainCS/: CorebrainCS.cs
corebrain/wrappers/csharp/CorebrainCS.Tests/: CorebrainCS.Tests.csproj  Program.cs  README.md
corebrain/wrappers/csharp_cli_api/: .gitignore  CorebrainCLIAPI.sln  README.md
corebrain/wrappers/csharp_cli_api/src/: .editorconfig
docs/: README.md
docs/source/: conf.py  corebrain.cli.auth.rst  corebrain.cli.rst  corebrain.config.rst  corebrain.core.rst  corebrain.db.connectors.rst  corebrain.db.rst  corebrain.db.schema.rst  corebrain.network.rst  corebrain.rst  corebrain.utils.rst  index.rst  modules.rst
docs/source/_static/: custom.css
examples/: add_config.py  complex.py  list_schema.py  simple.py
(+6 files in other folders)
